--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://${DBHOSTNAME}:3306/${DBSCHEMA}
-spring.datasource.username=${DBUSERNAME}
-spring.datasource.password=${DBPASSWORD}
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-04.cleardb.net:3306/heroku_0555acf22f72b82
+spring.datasource.username=b76ecf33336ebe
+spring.datasource.password=803636b5
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
